[gd_scene load_steps=7 format=3 uid="uid://bs72ogkvdd7d6"]

[ext_resource type="Script" uid="uid://bhwc16c8hxhrr" path="res://Scripts/Proto_controller.gd" id="1_ucva2"]
[ext_resource type="PackedScene" uid="uid://crfyxtc6thhoa" path="res://Scenes/Player/Flashlight.tscn" id="2_ddi6p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iof21"]
albedo_color = Color(0.91806, 0.575202, 0.222449, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ucva2"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iof21"]
radius = 0.4
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_0i1f7"]
size = Vector3(1.9, 1.5, 1.9)

[node name="ProtoController" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_ucva2")
can_sprint = true
input_sprint = "Sprint"

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
material_override = SubResource("StandardMaterial3D_iof21")
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ucva2")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_iof21")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="EquipedGun" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.19462585, -0.3417133, -0.8607975)

[node name="aim_ray" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, -0.8, -100)

[node name="Flashlight" parent="Head/Camera3D" instance=ExtResource("2_ddi6p")]
transform = Transform3D(-1.1279937, 0, 2.7798612, 0, 2.9999998, 0, -2.7798612, 0, -1.1279937, -0.3952551, -0.6101618, -0.31590784)

[node name="PickUpDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickUpDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0015029907, 1.0137687, 0.0021348)
shape = SubResource("BoxShape3D_0i1f7")

[connection signal="area_entered" from="PickUpDetector" to="." method="_on_pick_up_detector_area_entered"]
[connection signal="area_exited" from="PickUpDetector" to="." method="_on_pick_up_detector_area_exited"]
